[gd_scene load_steps=23 format=3 uid="uid://bgvo11j4kfjdc"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_h3eo1"]
[ext_resource type="Script" path="res://Scenes_and_scripts/UI/Menus/generation_button.gd" id="2_plgpl"]
[ext_resource type="Texture2D" uid="uid://c7jti5gp87fni" path="res://Textures/UI/Information/InfoBox.png" id="3_82pmn"]
[ext_resource type="PackedScene" uid="uid://cqfassynt86vn" path="res://Scenes_and_scripts/UI/Equation/mini_equation.tscn" id="4_ovcff"]
[ext_resource type="Texture2D" uid="uid://q7kyu3yv27sv" path="res://Textures/Buttons/icons/hammer.png" id="4_xnawx"]
[ext_resource type="Texture2D" uid="uid://dcwv3ofqvfivr" path="res://Textures/Buttons/icons/save_states.png" id="5_rmc36"]
[ext_resource type="Theme" uid="uid://cu3v7nxs2h2hu" path="res://Resources/Themes/spin_box.tres" id="6_5iseb"]
[ext_resource type="PackedScene" uid="uid://bug3v1xlp1gfr" path="res://Scenes_and_scripts/UI/Buttons/pull_out_tab_button_right.tscn" id="6_7e8c8"]
[ext_resource type="Script" path="res://Scenes_and_scripts/Classes/spin_box.gd" id="6_8ds75"]
[ext_resource type="PackedScene" uid="uid://dorw3vr2amuy3" path="res://Scenes_and_scripts/Components/button_sound_component.tscn" id="6_aanob"]
[ext_resource type="Texture2D" uid="uid://d16opu3dyhri7" path="res://Textures/Buttons/eye/eye_open.png" id="6_e14j5"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes_and_scripts/UI/Tooltip.tscn" id="6_kbwkg"]
[ext_resource type="Texture2D" uid="uid://dvx430022t0ua" path="res://Textures/Buttons/icons/next.png" id="7_dlb5i"]
[ext_resource type="Texture2D" uid="uid://bf4xxweukjvsb" path="res://Textures/Buttons/icons/interaction.png" id="8_8ns2c"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes_and_scripts/UI/Buttons/panelButton.tscn" id="8_ihypl"]
[ext_resource type="Texture2D" uid="uid://ikybt5yg3l6m" path="res://Textures/Buttons/icons/Generate.png" id="17_gy2j5"]
[ext_resource type="Script" path="res://Scenes_and_scripts/UI/Menus/PullOutTab.gd" id="25_jtb01"]
[ext_resource type="Texture2D" uid="uid://tql14gtq05lf" path="res://Textures/UI/Information/invalid.png" id="26_mv20u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rkkw6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7ags3"]
texture = ExtResource("3_82pmn")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_top = 30.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vbedn"]
texture = ExtResource("3_82pmn")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_bottom = 30.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4t00w"]
content_margin_left = 3.0
content_margin_top = 4.0
content_margin_bottom = 4.0
texture = ExtResource("3_82pmn")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_left = 15.0

[node name="GenerationButton" type="Control" node_paths=PackedStringArray("SaveStates", "Generate", "ViewDiagrams", "MinDegree", "MaxDegree", "Equation", "NoStatesToSave", "StatesSaved", "NoDiagramsFound", "GenerationCompleted", "FindSlider", "LoadTimeWarning", "ContentContainer", "TabButton", "MovingContainer")]
material = ExtResource("1_h3eo1")
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_plgpl")
SaveStates = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/Save")
Generate = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/Generate")
ViewDiagrams = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/View")
MinDegree = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer/MinDegree")
MaxDegree = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer/MaxDegree")
Equation = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/Equation")
NoStatesToSave = NodePath("MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/NoStatesToSave")
StatesSaved = NodePath("MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/StatesSaved")
NoDiagramsFound = NodePath("MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/NoDiagramsFound")
GenerationCompleted = NodePath("MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/GenerationSuccess")
FindSlider = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer2/FindSlider/VBoxContainer/Find")
LoadTimeWarning = NodePath("MovingContainer/LoadTimeWarning")
ContentContainer = NodePath("MovingContainer/MovingContainer/PanelContainer")
TabButton = NodePath("MovingContainer/MovingContainer/Tab")
MovingContainer = NodePath("MovingContainer")
move_direction = 2
time_to_pull_out = 0.35
time_to_push_in = 0.35

[node name="MovingContainer" type="Control" parent="."]
use_parent_material = true
layout_mode = 2
anchors_preset = 0
offset_left = 167.0
offset_right = 167.0

[node name="SubmitFeedback" type="Control" parent="MovingContainer" node_paths=PackedStringArray("ContentContainer", "MovingContainer")]
use_parent_material = true
layout_mode = 3
anchors_preset = 0
offset_left = -153.0
offset_top = 195.0
offset_right = -153.0
offset_bottom = 195.0
script = ExtResource("25_jtb01")
ContentContainer = NodePath("MovingContainer/PanelContainer")
MovingContainer = NodePath("MovingContainer")
move_direction = 3
stay_out_time = 2.0

[node name="MovingContainer" type="PanelContainer" parent="MovingContainer/SubmitFeedback"]
use_parent_material = true
layout_mode = 0
offset_right = 127.0
offset_bottom = 60.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_rkkw6")

[node name="PanelContainer" type="PanelContainer" parent="MovingContainer/SubmitFeedback/MovingContainer"]
use_parent_material = true
custom_minimum_size = Vector2(2.08165e-12, 24)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_7ags3")

[node name="VBoxContainer" type="VBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="NoStatesToSave" type="HBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/NoStatesToSave"]
layout_mode = 2
texture = ExtResource("26_mv20u")
stretch_mode = 2

[node name="Label" type="Label" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/NoStatesToSave"]
use_parent_material = true
layout_mode = 2
text = "No states to save
"

[node name="StatesSaved" type="HBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2

[node name="Label" type="Label" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/StatesSaved"]
use_parent_material = true
layout_mode = 2
text = "States saved"

[node name="NoDiagramsFound" type="HBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/NoDiagramsFound"]
layout_mode = 2
texture = ExtResource("26_mv20u")
stretch_mode = 2

[node name="Label" type="Label" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/NoDiagramsFound"]
use_parent_material = true
layout_mode = 2
text = "No diagrams found"

[node name="GenerationSuccess" type="HBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2

[node name="Label" type="Label" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/GenerationSuccess"]
use_parent_material = true
layout_mode = 2
text = "Generation finished
"

[node name="LoadTimeWarning" type="Control" parent="MovingContainer" node_paths=PackedStringArray("ContentContainer", "MovingContainer")]
use_parent_material = true
layout_mode = 3
anchors_preset = 0
offset_left = -155.0
offset_right = -155.0
script = ExtResource("25_jtb01")
ContentContainer = NodePath("MovingContainer/PanelContainer")
MovingContainer = NodePath("MovingContainer")
move_direction = 1

[node name="MovingContainer" type="PanelContainer" parent="MovingContainer/LoadTimeWarning"]
use_parent_material = true
layout_mode = 0
offset_right = 127.0
offset_bottom = 60.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_rkkw6")

[node name="PanelContainer" type="PanelContainer" parent="MovingContainer/LoadTimeWarning/MovingContainer"]
use_parent_material = true
custom_minimum_size = Vector2(2.08165e-12, 24)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_vbedn")

[node name="VBoxContainer" type="VBoxContainer" parent="MovingContainer/LoadTimeWarning/MovingContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="NoStatesToSave" type="HBoxContainer" parent="MovingContainer/LoadTimeWarning/MovingContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MovingContainer/LoadTimeWarning/MovingContainer/PanelContainer/VBoxContainer/NoStatesToSave"]
layout_mode = 2
texture = ExtResource("26_mv20u")
stretch_mode = 2

[node name="WarningLabel" type="Label" parent="MovingContainer/LoadTimeWarning/MovingContainer/PanelContainer/VBoxContainer/NoStatesToSave"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
text = "Warning: May take a while
"

[node name="MovingContainer" type="HBoxContainer" parent="MovingContainer"]
material = ExtResource("1_h3eo1")
use_parent_material = true
layout_mode = 0
offset_left = -167.0
offset_bottom = 134.0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="MovingContainer/MovingContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_4t00w")

[node name="VBoxContainer" type="VBoxContainer" parent="MovingContainer/MovingContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 2
alignment = 2

[node name="OptionsContainer" type="VBoxContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="PanelContainer" type="PanelContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer"]
use_parent_material = true
layout_mode = 2

[node name="DegreeContainer" type="HBoxContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="MinDegree" type="SpinBox" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_5iseb")
min_value = 1.0
max_value = 6.0
value = 1.0
alignment = 2
select_all_on_focus = true
script = ExtResource("6_8ds75")

[node name="TextureRect2" type="TextureRect" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer"]
use_parent_material = true
custom_minimum_size = Vector2(15, 2.08165e-12)
layout_mode = 2
texture = ExtResource("7_dlb5i")
expand_mode = 5
stretch_mode = 5

[node name="MaxDegree" type="SpinBox" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_5iseb")
min_value = 1.0
max_value = 6.0
value = 4.0
alignment = 2
select_all_on_focus = true
script = ExtResource("6_8ds75")

[node name="TextureRect" type="TextureRect" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer"]
use_parent_material = true
layout_mode = 2
texture = ExtResource("8_8ns2c")
stretch_mode = 5

[node name="GridContainer" type="GridContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 2

[node name="electromagnetic_check" type="CheckButton" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
button_pressed = true
text = "EM"
alignment = 1

[node name="ButtonSoundComponent" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/electromagnetic_check" instance=ExtResource("6_aanob")]

[node name="strong_check" type="CheckButton" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
button_pressed = true
text = "strong"
alignment = 1

[node name="ButtonSoundComponent" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/strong_check" instance=ExtResource("6_aanob")]

[node name="weak_check" type="CheckButton" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
button_pressed = true
text = "weak"
alignment = 1

[node name="ButtonSoundComponent" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/weak_check" instance=ExtResource("6_aanob")]

[node name="electroweak_check" type="CheckButton" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
button_pressed = true
text = "E. weak"
alignment = 1

[node name="ButtonSoundComponent" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/electroweak_check" instance=ExtResource("6_aanob")]

[node name="Tadpoles" type="CheckButton" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 1
text = "tadpoles"

[node name="ButtonSoundComponent" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/Tadpoles" instance=ExtResource("6_aanob")]

[node name="SelfEnergy" type="CheckButton" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
unique_name_in_owner = true
use_parent_material = true
custom_minimum_size = Vector2(73, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "self-
energy"

[node name="ButtonSoundComponent" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/SelfEnergy" instance=ExtResource("6_aanob")]

[node name="PanelContainer2" type="PanelContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer"]
use_parent_material = true
layout_mode = 2

[node name="FindSlider" type="VBoxContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer2"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer2/FindSlider"]
use_parent_material = true
layout_mode = 2
mouse_filter = 1
text = "FIND"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer2/FindSlider"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="Find" type="HSlider" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer2/FindSlider/VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
size_flags_horizontal = 4
max_value = 2.0
tick_count = 3
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer2/FindSlider/VBoxContainer"]
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="All" type="Label" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer2/FindSlider/VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
text = "  All"

[node name="Lowest Order" type="Label" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer2/FindSlider/VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
text = " Lowest order"
horizontal_alignment = 1

[node name="One" type="Label" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer2/FindSlider/VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
text = " One "
horizontal_alignment = 2

[node name="Equation" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer" instance=ExtResource("4_ovcff")]
custom_minimum_size = Vector2(120, 21)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Save" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("8_ihypl")]
layout_mode = 2
icon = ExtResource("5_rmc36")
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/Save" instance=ExtResource("6_kbwkg")]
tooltip = "Save states"

[node name="Generate" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("8_ihypl")]
layout_mode = 2
minimum_size = Vector2(29, 24)
disabled = true
icon = ExtResource("17_gy2j5")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/Generate" instance=ExtResource("6_kbwkg")]
tooltip = "Generate"

[node name="View" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("8_ihypl")]
layout_mode = 2
minimum_size = Vector2(24, 23)
disabled = true
icon = ExtResource("6_e14j5")

[node name="Tooltip" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/View" instance=ExtResource("6_kbwkg")]
tooltip = "View generated diagrams"

[node name="Tab" parent="MovingContainer/MovingContainer" instance=ExtResource("6_7e8c8")]
layout_mode = 2
TabIcon = ExtResource("4_xnawx")
TabMinimumSize = Vector2(28, 25)
expand_icon = true
icon_use_parent_material = true

[connection signal="push_in_finished" from="MovingContainer/SubmitFeedback" to="." method="_on_submit_feedback_push_in_finished"]
[connection signal="push_in_finished" from="MovingContainer/LoadTimeWarning" to="." method="_on_submit_feedback_push_in_finished"]
[connection signal="value_changed" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer/MinDegree" to="." method="_on_min_degree_value_changed"]
[connection signal="value_changed" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer/MaxDegree" to="." method="_on_max_degree_value_changed"]
[connection signal="toggled" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/electromagnetic_check" to="." method="_on_electromagnetic_toggled"]
[connection signal="toggled" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/weak_check" to="." method="_on_weak_toggled"]
[connection signal="toggled" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/electroweak_check" to="." method="_on_electro_weak_toggled"]
[connection signal="value_changed" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer2/FindSlider/VBoxContainer/Find" to="." method="_on_find_value_changed"]
[connection signal="pressed" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/Generate" to="." method="_on_generate_pressed"]
[connection signal="pressed" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/View" to="." method="_on_view_pressed"]
